--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+
+img{
+  max-width: 100%;
+  object-fit: cover;
+}
+
+.nasa-photo-wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.explanation{
+  max-width: 60%;
+  object-fit: cover;
+}
